@@ -1,7 +1,7 @@
 .\"
-.\" $Id: smi_macro.3.in,v 1.2 2000/02/11 16:42:32 strauss Exp $
+.\" $Id: smi_macro.3.in,v 1.3 2000/02/11 23:19:09 strauss Exp $
 .\"
-.TH smi_macro 3  "February 11, 2000" "IBR" "SMI Management Information Library"
+.TH smi_macro 3  "November 6, 2000" "IBR" "SMI Management Information Library"
 .SH NAME
 .\" START OF MAN PAGE COPIES
 smiGetMacro,
